# C3-creative-coding-components

./: .gitattributes  README.md
dev_dreamscape/: Cargo.toml  Makefile  README.md  build.rs  index.html  webserver.py
dev_dreamscape/res/: Sci-Fi-Floor.mtl  crater_city.mtl  cube.mtl  moon_surface-collider.mtl  moon_surface.mtl
dev_dreamscape/res/Rock1/: RedishRock-collider.mtl  RedishRock.mtl
dev_dreamscape/res/Rock2/: LICENSE  Rock2-collider.mtl  Rock2.mtl
dev_dreamscape/res/mars_surface/: Crater.mtl  Crater_low-collision.mtl  Crater_low.mtl
dev_dreamscape/res/moon_surface/: moon_surface-collider.mtl  moon_surface.mtl
dev_dreamscape/src/: app.rs  assets.rs  device.rs  events.rs  frame_time.rs  lib.rs  logging.rs  main.rs  math.rs  mesh.rs  physics_world.rs  texture.rs
dev_dreamscape/src/components/: artifact.rs  camera.old.rs  camera.rs  floor_box.rs  floor_grid.rs  free_box.rs  light.rs  mesh_renderer.rs  mesh_spec.rs  mod.rs  model_spec.rs  physics_body.rs  player.rs  player_hands.rs  post_processor.rs  rock.rs  skybox.rs  transform.old.rs  transform.rs
dev_dreamscape/src/renderers/: downscale.rs  hdr.rs  instance.rs  mod.rs  phong.rs  shader_utils.rs  skybox.rs  utils.rs  xr.rs
dev_dreamscape/src/renderers/shaders/: downscale.wgsl  hdr.wgsl  light.wgsl  phong.wgsl  skybox.wgsl  upscale.wgsl
dev_dreamscape/src/shaders/: diffuse_shader.rs  mod.rs  post_process_shader.rs  skybox_shader.rs  utils.rs
dev_dreamscape/src/systems/: global_render.rs  handle_system_events.rs  init_app.rs  mod.rs  render.rs  schedules.rs
dev_dreamscape/src/systems/schedules/: before_update.rs  global_render.rs  mod.rs  render.rs  spawn_scene.rs  update.rs
dev_dreamscape/src/utils/: mod.rs
dev_dreamscape/src/utils/wgpu_ext/: mod.rs
dev_dreamscape/src/xr/: mod.rs  utils.rs  webxr.rs
dev_dreamscape/src/xr/wgpu_ext/: device.rs
dev_dreamscape_backup/src/: app.rs  events.rs  main.rs  mesh.rs  render_tags.rs
dev_dreamscape_backup/src/components/: floor_box.rs  free_box.rs  mesh_renderer.rs  post_processor.rs  skybox.rs
dev_dreamscape_backup/src/shaders/: post_process_shader.rs  skybox_shader.rs  utils.rs
dev_dreamscape_backup/src/systems/: mod.rs  render.rs  schedules.rs
dev_project_1/: Cargo.toml  test_wasm.html
dev_project_1/src/: lib.rs  main.rs
dev_project_2/: Cargo.toml
dev_project_2/src/: lib.rs  shader.wgsl
dev_project_3/: Cargo.toml
dev_project_3/src/: lib.rs  shader.wgsl
dev_project_4/: Cargo.toml
dev_project_4/src/: lib.rs  shader.wgsl  texture.rs
dev_project_5/: Cargo.toml
dev_project_5/src/: inputhandler.rs  lib.rs  main.rs  shader.wgsl
dev_project_7/src/: lib.rs  texture.rs
dev_project_8/: Cargo.toml  build.rs
dev_project_8/src/: lib.rs  model.rs  resources.rs  shader.wgsl
examples/simple_project/: Cargo.toml
examples/simple_project/src/: lib.rs  main.rs
test_blank_window/: Cargo.toml
test_blank_window/src/: main.rs
webxr_app/: Cargo.toml  README.md  index.html
webxr_app/src/: app.rs  assets.rs  camera.rs  camera_controller.rs  instance.rs  lib.rs  light.rs  light.wgsl  main.rs  maths.rs  model.rs  node.rs  pass.rs  phong.rs  resources.rs  shader.wgsl  shader_utils.rs  skybox.rs  texture.rs  transform.rs  utils.rs  wgpu_utils.rs  xr.rs
webxr_app/src/shaders/: light.wgsl  phong.wgsl  skybox.wgsl  utils.wgsl
