[package]
name = "dev_dreamscape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"

winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
    "async",
]}
bevy_ecs = "0.10.0"
ddsfile = "0.5.1"
imgui = "0.10.0"
imgui-wgpu = "0.22.0"
rapier3d = { version = "0.17.2", features = ["simd-stable"] }


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]




[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}
reqwest = { version = "0.11" }



