[package]
name = "dev_dreamscape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
anyhow = "1.0"
bevy_ecs = "0.11.2"
bevy_utils = "0.11.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1"
env_logger = "0.10"
getrandom = { version = "0.2.10" }
instant = "0.1"
ktx2 = "0.3.0"
log = "0.4"
naga = { version = "0.13", features = ["wgsl-in", "wgsl-out", "clone", "span"] }
naga_oil = "0.10.0"
pollster = "0.3"
rapier3d = { version = "0.17.2", features = ["simd-stable"] }
tobj = { version = "3.2.1", features = [
    "async",
]}
web-time = "0.2.3"
winit = "0.28.4"
wgpu = { version = "0.17", features = ["naga"]}

[dependencies.image]
default-features = false
features = ["png", "jpeg"]
version = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
getrandom = { version = "0.2.10", features = ["js"] }
glow = "0.12.3"
js-sys = "0.3.64"
reqwest = { version = "0.11" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wgpu = { version = "0.17", features = ["webgl","fragile-send-sync-non-atomic-wasm","naga"]}
wgpu-hal = { version = "0.17.0" }
web-sys = { version = "0.3.37", features = [
  # STANDARD
  'console',
  'Document',
  'Element',
  'Headers',
  "Location",
  'Navigator',
  'Window',
  # IO
  # 'Json',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  # 'Url',
  # WEBGL
  'Gpu',
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
  'WebGlFramebuffer',
  ## XR
  'DomPointReadOnly',
  'XrBoundedReferenceSpace',
  'XrEye',
  'XrFrame',
  'XrHandedness',
  'XrInputSource',
  'XrInputSourceArray',
  'XrInputSourceEvent',
  'XrInputSourceEventInit',
  'XrInputSourcesChangeEvent',
  'XrJointPose',
  'XrJointSpace',
  'XrPose',
  'XrReferenceSpace',
  'XrReferenceSpaceEvent',
  'XrReferenceSpaceEventInit',
  'XrReferenceSpaceType',
  'XrRenderState',
  'XrRenderStateInit',
  'XrRigidTransform',
  'XrSession',
  'XrSessionEvent',
  'XrSessionEventInit',
  'XrSessionInit',
  'XrSessionMode',
  'XrSpace',
  'XrTargetRayMode',
  'XrView',
  'XrViewerPose',
  'XrViewport',
  'XrVisibilityState',
  'XrWebGlLayer',
  'XrWebGlLayerInit',
  'XrSystem',
]}
