[package]
name = "webxr_app"
version = "0.1.0"
authors = ["Mayur Patel <mayurp@gmail.com>"]
edition = "2018"
#resolver = "2"

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
wgpu-hal = "0.17.0"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

web-sys = { version = "0.3.37", features = [
  'Document',
  'Window',
  'Element',
  'Gpu',
  'Headers',
  'HtmlCanvasElement',
  'Navigator',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'WebGl2RenderingContext',
  'XrBoundedReferenceSpace',
  'XrEye',
  'XrFrame',
  'XrHandedness',
  'XrInputSource',
  'XrInputSourceArray',
  'XrInputSourceEvent',
  'XrInputSourceEventInit',
  'XrInputSourcesChangeEvent',
  'XrJointPose',
  'XrJointSpace',
  'XrPose',
  'XrReferenceSpace',
  'XrReferenceSpaceEvent',
  'XrReferenceSpaceEventInit',
  'XrReferenceSpaceType',
  'XrRenderState',
  'XrRenderStateInit',
  'XrRigidTransform',
  'XrSession',
  'XrSessionEvent',
  'XrSessionEventInit',
  'XrSessionInit',
  'XrSessionMode',
  'XrSpace',
  'XrTargetRayMode',
  'XrView',
  'XrViewerPose',
  'XrViewport',
  'XrVisibilityState',
  'XrWebGlLayer',
  'XrWebGlLayerInit',
  'XrSystem',
  'console'
]}

[lib]
crate-type = ["cdylib", "rlib"]
