[package]
name = "webxr_app"
version = "0.1.0"
authors = ["Mayur Patel <mayurp@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1"
cgmath = "0.18"
env_logger = "0.10"
instant = "0.1"
log = "0.4"
pollster = "0.3"
wgpu = "0.17"
winit = "0.28"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
glow = "0.12.3"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wgpu = { version = "0.17", features = ["webgl"]}
wgpu-hal = { version = "0.17.0" }

web-sys = { version = "0.3.37", features = [
  # STANDARD
  'console',
  'Document',
  'Element',
  'Headers',
  'Navigator',
  'Window',
  # IO
  # 'Json',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  # 'Url',
  # WEBGL
  'Gpu',
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
  'WebGlFramebuffer',
  ## XR
  'DomPointReadOnly',
  'XrBoundedReferenceSpace',
  'XrEye',
  'XrFrame',
  'XrHandedness',
  'XrInputSource',
  'XrInputSourceArray',
  'XrInputSourceEvent',
  'XrInputSourceEventInit',
  'XrInputSourcesChangeEvent',
  'XrJointPose',
  'XrJointSpace',
  'XrPose',
  'XrReferenceSpace',
  'XrReferenceSpaceEvent',
  'XrReferenceSpaceEventInit',
  'XrReferenceSpaceType',
  'XrRenderState',
  'XrRenderStateInit',
  'XrRigidTransform',
  'XrSession',
  'XrSessionEvent',
  'XrSessionEventInit',
  'XrSessionInit',
  'XrSessionMode',
  'XrSpace',
  'XrTargetRayMode',
  'XrView',
  'XrViewerPose',
  'XrViewport',
  'XrVisibilityState',
  'XrWebGlLayer',
  'XrWebGlLayerInit',
  'XrSystem',
]}

[lib]
crate-type = ["cdylib", "rlib"]
